# MAMPOK

./: .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE  README.md  auth_503_findings.md  auth_deploy_findings.md  pyproject.toml  tst1-mamplan.json
docs/: lifetime_analysis.md
docs/source/: advanced.rst  api_reference.rst  commands.rst  concepts.rst  conf.py  configuration.rst  functions.rst  getting_started.rst  index.rst  mamplans.rst  mamplates.rst  python_api.rst  selection.rst
docs/source/_static/: custom.css
examples/: my-cellxgene-project-mamplan.json
examples/mamplates/: cellxgene-mamplate.json  sleep-init-mamplate.json
figures/: fig1_architecture.py  fig2_separation_of_concerns.py  fig3_data_lifecycle.py  fig4_state_machine.py  fig5_complexity_comparison.py  fig6_project_timeline.py
markdowns/: awscli_vs_rclone.md  direct_s3_access.md  lifetime_impl.md  shprojects-update.md  stop-progress-track.md
src/mampok/: __init__.py
src/mampok/config/: __init__.py  config.py
src/mampok/config/schemas/: config_schema.json
src/mampok/interfaces/: __init__.py  api.py  base.py  cli.py
src/mampok/kubernetes/: __init__.py  builder.py  client.py  config.py  manager.py  validator.py
src/mampok/kubernetes/resources/: __init__.py  deployment.py  ingress.py  job.py  monitoring.py  secret.py  service.py
src/mampok/mamplan/: __init__.py  base.py  mamplan.py  mamplate.py  metadata.py  shmamplan.py
src/mampok/mamplan/schemas/: mamplan_schema.json  mamplate_schema.json  shmamplan_schema.json
src/mampok/mampok/: __init__.py  mampok.py
src/mampok/s3/: __init__.py  s3.py
tests/: conftest.py
tests/test_config/: test_config.py
tests/test_interfaces/: __init__.py  test_api.py  test_cli.py
tests/test_kubernetes/: __init__.py  conftest.py  test_builder.py  test_client.py  test_manager.py
tests/test_mamplan/: __init__.py  test_mamplan.py  test_metadata.py
tests/test_mampok/: __init__.py  conftest.py  test_mampok.py
tests/test_s3/: __init__.py  test_s3.py
tools/: README.md  migrate_mamplans.py
